Styles/_footer.scss
@import 'transition-mixins';

footer {
    color: $mediumbrown;
    margin-top: auto;
}

.footer-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.hours {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: baseline;
    text-align: center;
    max-width: 25%;
    flex-shrink: 0;

    :nth-child(even) {
        flex-basis: 40%;
    }
}

.locations {
    display: flex;
    flex-wrap: wrap;
    flex-grow: 1;

    .location-address {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
        flex-basis: 50%;

        h5 {
            padding: 3%;
            text-align: center;
            flex-basis: 20%;
        }

        p {
            flex-grow: 1;
            flex-basis: 50%;
        }
    }
}

.brown-separator {
    border-right: dashed 2px $mediumbrown;
}

.wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.footer-logo {
    scale: calc(.75);
}

.mobile-socials {
    a {
        color: $darkbrown;
        font-size: rem(20px);}

    a:hover, a:focus {
        @include transition-color;
        color: $mediumbrown;}
    display: none;
}

// Desktop-size socials at very bottom

.socials {
    margin-top: 1%;
    background-color: $mediumbrown;
    height: max-content;
    padding: 1rem 0rem 1rem 0rem;
    text-align: center;

    > i, a {
        color: $yellow;
        font-size: rem(24px);
        letter-spacing: rem(6px);
    }

    a:hover, a:focus {
        @include transition-color;
        color: $darkbrown;
    }
}

@media only screen and (max-width: 600px) {
    footer {margin-top: 1rem;}
    .footer-container {
        flex-direction: column;
         >:last-of-type {
            align-self: initial;
        }
    }
    .mobile-socials {display: block;}
    .socials {display: none;}
    .location-address {flex-wrap: row;}
    .brown-separator {border: none;}
    .hours {max-width: 100%;}
}

